[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "lfa_toolbox"
version = "0.2"
description = "LFA Toolbox is an educational library to play with fuzzy systems"
authors = [
  { name = "Gary Marigliano" }
]
readme = "README.md"
license = { text = "GPL" }
requires-python = ">=3.5"

dependencies = [
  "numpy",
  "matplotlib",
  "pandas"
]

classifiers = [
  "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
  "Programming Language :: Python :: 3"
]

[project.urls]
Homepage = "http://iict-space.heig-vd.ch/cpn/"

# This is like your old tests_require
[project.optional-dependencies]
test = [
  "pytest"
]

[tool.setuptools.packages.find]
include = ["lfa_toolbox", "lfa_toolbox.*"]

[tool.pytest.ini_options]
addopts = "--verbose"
testpaths = ["tests"]
